Configura plugin de testing